components/navTabs/navtabs.module.css
.container {
  flex: 5;
}

.tabs {
  top: 68px;
  display: flex;
  padding: 15px 0;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  background-color: var(--bodyBgColor);
  border-bottom: 1px solid var(--navBarBorderColor);
}

.tabs ul {
  gap: 20px;
  margin: 0;
  padding: 0;
  display: flex;
  list-style: none;
  align-items: center;
}

.tabs a {
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  padding-bottom: 17px;
  text-decoration: none;
  transition: all 0.5s ease-in;
  color: var(--feedsTabNavLink);
}

.tabs a:hover {
  color: var(--feedsActiveTabLink);
}

.tabs a.active {
  font-weight: 700;
  transition: all 0.5s ease-in;
  color: var(--feedsActiveTabLink);
  border-bottom: 1px solid var(--feedsActiveTabLink);
}

.content {
  padding-top: 30px;
}

@media (min-width: 576px) {
}

@media (min-width: 768px) {
}

@media (min-width: 992px) {
}

@media (min-width: 1200px) {
  .tabs {
    top: 75px;
  }
}

